Write the corpus through the library rather than around it
This service exists to hold the corpus and to apply the writes the deployment queues
against it. Almost all of what stood between those two things was a second
implementation of what the library and the corpus client now do.

`WritableRemoteJsonSource` read a file, merged mutations into it, tracked a blob sha,
retried a 412 and PUT the result - nine hundred lines of it, per model. That is one
call to a source that holds a write instruction. `RemoteSkyBlockFactory` wrapped all
thirty-four of the factory's stores to attach that source to each one; a source is per
origin, so there is nothing to wrap. `GitDataCommitService`, `BatchCommitRequest`,
`StagedBatch`, `BufferedMutation`, `WriteMode` and `WriteBatchScheduler` were the
staging and commit machinery around it, and `SkyBlockDataConfig` was a third copy of
the client assembly.

What is left is the deployment's, which is what D6 says it should be: an envelope that
can cross a process boundary, a queue, a backoff, a dead-letter map, and metrics for
all of it. A cycle drains, groups by type and operation so N rows are one commit rather
than N, and calls `JpaSession.write`.

The poller stops writing audit rows to a database and stops triggering refreshes. It
asks whether the revision moved, compares each document's composed fingerprint against
the one it last saw, and reports. Nothing it does can rebuild a generation, which is
what "a downstream consumer never rehydrates" has to mean in the one deployment that
would otherwise be able to.

The session holds no driver. This module opened two - one Hazelcast-backed for the
corpus and one H2 for the asset tables - and needs neither.